change html markup for overlay, correct accidentally swapped pos.x and pos.y, remove temporary margin to prevent scroll-offset in old version and fixed jumping windows

--- a/sass/_basic.scss
+++ b/sass/_basic.scss
@@ -5,7 +5,7 @@ html,
 body {
     margin: 0;
     overflow-x: hidden;
-    height: 100%;
+    min-height: 100%;
     position: relative;
 }
 
