--- a/sass/_window.scss
+++ b/sass/_window.scss
@@ -12,11 +12,11 @@
   left: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 #popups {
   position: relative;
-  width: 100%;
   height: 100%;
 }
 
@@ -28,7 +28,7 @@
 .window { // would be nice to add a little animation when the window pops up
   animation: window-open 0.2s ease-in;
   border-radius: 5px;
-  position: relative;
+  position: absolute;
   border: 5px solid $white;
   display: flex;
   flex-direction: column;
